--- a/composer.json
+++ b/composer.json
@@ -23,15 +23,15 @@
         "php": "^5.6|^7.0",
 
         "stof/doctrine-extensions-bundle": "~1.1",
-        "sylius/shipping": "^0.19",
-        "sylius/money-bundle": "^0.19",
-        "sylius/resource-bundle": "^0.19",
-        "symfony/framework-bundle": "^2.8"
+        "sylius/shipping": "dev-symfony_3_compatibility",
+        "sylius/money-bundle": "dev-symfony_3_compatibility",
+        "sylius/resource-bundle": "dev-symfony_3_compatibility",
+        "symfony/framework-bundle": "^3.0"
     },
     "require-dev": {
         "phpspec/phpspec": "^2.4",
-        "symfony/form": "^2.8",
-        "symfony/validator": "^2.8"
+        "symfony/form": "^3.0",
+        "symfony/validator": "^3.0"
     },
     "config": {
         "bin-dir": "bin"
